--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,24 @@
  font-family: 'Playfair Display', serif;
 }
 
+nav, ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  text-align: left;
+
+}
+
+
+
+#inicio,
+#contacto {
+  height: 100px;
+  padding: 50px;
+  scroll-margin-top: 60px; /* Añadir un margen superior para evitar que el header cubra el contenido */
+}
+
 body
 {  
 margin: 0;
@@ -27,8 +45,7 @@ h1,h2{
 
   background-color: pink;
   height: 250px;
-  width: 700px;
-  border-radius: 10%;
+  width: 1000px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -38,7 +55,7 @@ h1,h2{
 .parrafo1{ 
 
   height: 250px;
-  width: 700px;
+  width: 1000px;
   border-radius: 10%;
   text-align: center;
   margin-left: auto;
@@ -48,15 +65,19 @@ h1,h2{
 
 .circulo{
   border-radius: 50%;
-  height: 150px;
-  width: 150px;
+  height: 400px;
+  width: 400px;
   }
 
-.parteBoton{
-  display: flex;
-  justify-content: center; /* Centra horizontalmente */
-  align-items: center;
-}
+  .parteBoton {
+    display: flex;
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center;
+    outline: none; /* Elimina el remarcado del botón */
+    border: none; /* Elimina el borde del botón */
+  }
+ 
+
 .boton{ 
   text-align: center;
   display: block;
@@ -66,52 +87,78 @@ h1,h2{
   border-radius: 10px;
   margin: 50px 50px;
   height: 50px;
-  background-color: palevioletred;
   align-content: center;
+  background-color: blueviolet; 
+  outline: none; /* Elimina el remarcado del botón */
+  border: none; /* Elimina el borde del botón */
+
 }
 
 ul {
   list-style: none;
+
 }
 
 a {
   text-decoration: none;
   color: inherit;
 }
-.piePagina{ 
+#piePagina{ 
   display: flex;
   justify-content:center;
 }
-
 
 .mail, .gif, .link{
   height: 50px;
   width: 50px;
-  margin: 30px 10px;
+  margin: 30px 20px;
 }
+
 
 main {
-  max-width: 1200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
   margin: auto;
-  display:flex;
-  justify-content: center; 
 }
 
 
-
-.final{
+.final {
   display: flex;
-  justify-content:center;
+  justify-content: center;
   width: 100%;
   background-color: blueviolet;
-  max-width: 250px;
   margin: auto;
   display: grid;
   grid-gap: 50px;
   padding: 10px 20px;
-
 }
 
 p{
   text-align: center, justify ;
+}
+
+#encabezado{
+  text-align: left;
+}
+
+header {
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+    height: 100px;
+    padding: 10px 20px;
+    position: fixed;
+    box-shadow: 6px 6px 10px #cecbcb;
+    background-color: #fbfbfb;
+}
+
+#logo{
+  max-height: 70px;
+}
+
+.columna{
+  width: 100px;
 }
